--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title:               Lanyon
 tagline:             'A Jekyll theme'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 https://cwd-wiki.github.io
-baseurl:             '/public'
+url:                 http://cwd-wiki.tk
+baseurl:             '/cwd-wiki/'
 paginate:            5
 permalink:           pretty
 
