--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
+title:               Calabria Weather Data
+tagline:             'Wiki'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 http://cwd-wiki.tk
 baseurl:             ''
@@ -11,7 +11,7 @@ permalink:           pretty
 author:
   name:              Mark Otto
   url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  email:             calabriaweatherdata@gmail.com
 
 # Gems
 plugins:
